// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar > should match snapshot with custom fallback 1`] = `
<DocumentFragment>
  <div
    class="flex relative justify-center items-center box-border overflow-hidden align-middle z-0 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-10 h-10 text-tiny bg-default text-default-foreground rounded-full"
    tabindex="-1"
  >
    <img
      alt="avatar"
      class="flex object-cover w-full h-full transition-opacity !duration-500 opacity-0 data-[loaded=true]:opacity-100"
    />
    <div
      aria-label="avatar"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 flex items-center justify-center"
      role="img"
    >
      <div>
        Custom Fallback
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should match snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="flex relative justify-center items-center box-border overflow-hidden align-middle z-0 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-10 h-10 text-tiny bg-default text-default-foreground rounded-full"
    tabindex="-1"
  >
    <img
      alt="avatar"
      class="flex object-cover w-full h-full transition-opacity !duration-500 opacity-0 data-[loaded=true]:opacity-100"
    />
  </div>
</DocumentFragment>
`;

exports[`Avatar > should match snapshot with image 1`] = `
<DocumentFragment>
  <div
    class="flex relative justify-center items-center box-border overflow-hidden align-middle z-0 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-10 h-10 text-tiny bg-default text-default-foreground rounded-full"
    tabindex="-1"
  >
    <img
      alt="Test Avatar"
      class="flex object-cover w-full h-full transition-opacity !duration-500 opacity-0 data-[loaded=true]:opacity-100"
      src="https://example.com/avatar.jpg"
    />
  </div>
</DocumentFragment>
`;

exports[`Avatar > should match snapshot with name 1`] = `
<DocumentFragment>
  <div
    class="flex relative justify-center items-center box-border overflow-hidden align-middle z-0 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-10 h-10 text-tiny bg-default text-default-foreground rounded-full"
    tabindex="-1"
  >
    <img
      alt="John Doe"
      class="flex object-cover w-full h-full transition-opacity !duration-500 opacity-0 data-[loaded=true]:opacity-100"
    />
  </div>
</DocumentFragment>
`;
